# 9Player

./: .gitignore  README.en.md  README.md  README.zh-CN.md  README.zh-TW.md  settings.gradle.kts
.github/workflows/: release-on-tag.yml
_dict_tmp/: index.json  styles.css
app/: build.gradle.kts  lint.xml
app/src/androidTest/java/com/example/tset/: ExampleInstrumentedTest.kt
app/src/androidTest/java/moe/tekuza/m9player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hoshidicts_jni.cpp
app/src/main/cpp/hoshidicts/: CMakeLists.txt
app/src/main/cpp/hoshidicts/include/: hoshidicts.h  module.modulemap
app/src/main/cpp/hoshidicts/include/hoshidicts/: deconjugator.hpp  importer.hpp  lookup.hpp  query.hpp
app/src/main/cpp/hoshidicts/src/: importer.cpp  lookup.cpp  query.cpp
app/src/main/cpp/hoshidicts/src/deconjugator/: deconjugation_rules.hpp  deconjugator.cpp
app/src/main/cpp/hoshidicts/src/hash/: hash.cpp  hash.hpp
app/src/main/cpp/hoshidicts/src/json/: yomitan_parser.cpp  yomitan_parser.hpp
app/src/main/cpp/hoshidicts/src/text_processor/: text_processor.cpp  text_processor.hpp
app/src/main/java/com/example/tset/: AnkiApiBridge.kt  AnkiConfigStore.kt  AnkiExporter.kt  AnkiSettingsActivity.kt  AudiobookFloatingOverlayService.kt  AudiobookSettingsActivity.kt  AudiobookSettingsStore.kt  BookReaderActivity.kt  BookReaderCollectionStore.kt  BookReaderFloatingBridge.kt  BookReaderPlaybackStore.kt  ControlModeSettingsActivity.kt  ControllerBluetoothSettingsActivity.kt  ControllerBluetoothStore.kt  ControllerSettingsActivity.kt  DictionaryCacheStore.kt  DictionaryEngine.kt  DictionaryModels.kt  DictionarySqlStore.kt  GamepadControlStore.kt  HoshiNativeBridge.kt  ImportStateStore.kt  InfoActivity.kt  LookupGrouping.kt  LookupSelection.kt  M4bChapterParser.kt  MainActivity.kt  MecabTokenizer.kt  PlaybackNotificationController.kt  ShizukuBinderBridge.kt  ShizukuBluetoothController.kt
app/src/main/java/moe/tekuza/m9player/: AnkiApiBridge.kt  AnkiConfigStore.kt  AnkiDuplicateConfig.kt  AnkiExporter.kt  AnkiSettingsActivity.kt  AppLanguageStore.kt  AudiobookFloatingOverlayService.kt  AudiobookSettingsActivity.kt  AudiobookSettingsStore.kt  AudiobookUiSettingsActivity.kt  BookFileSupport.kt  BookReaderActivity.kt  BookReaderCollectionStore.kt  BookReaderFloatingBridge.kt  BookReaderPlaybackStore.kt  ControlModeSettingsActivity.kt  ControllerBluetoothSettingsActivity.kt  ControllerBluetoothStore.kt  ControllerSettingsActivity.kt  DictionaryBundledResourceResolver.kt  DictionaryCacheStore.kt  DictionaryEngine.kt  DictionaryMediaBytes.kt  InfoActivity.kt  (+43 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_overlay_favorite.xml  ic_overlay_lock.xml  ic_overlay_next.xml  ic_overlay_pause.xml  ic_overlay_previous.xml  ic_overlay_repeat.xml  ic_overlay_repeat_one.xml  ic_overlay_settings.xml  ic_overlay_unlock.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/main/rust/mdict_native/: Cargo.toml
app/src/main/rust/mdict_native/src/: lib.rs
docs/: lookup-refactor-notes.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
